--- a/css/index.css
+++ b/css/index.css
@@ -144,3 +144,63 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: black;
+}
+
+nav .a {
+    display: flex;
+    justify-content: center;
+    
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+.boxes {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+margin-top: 15px;
+
+justify-content: space-between;
+}
+  .box1 { 
+     background-color:teal;} 
+ .box2 { 
+     background-color:gold;
+    }
+ .box3 {
+     background-color:cadetblue
+    }
+ .box4 {background-color:coral}
+ .box5 {background-color:crimson}
+ .box6 {background-color:forestgreen}
+ .box7 {
+     background-color:darkorchid
+    }
+ .box8 {
+    background-color: hotpink
+    }
+ .box9 {
+    background-color:indigo
+ }
+ .box10{
+    background-color: dodgerblue;
+ }
+
+ /* about.html code starts here */
+
+ .about-container{
+ display: flex;
+ justify-content: center;
+ 
+ }
